# tetris_hw_gui

./: .clang-format  .gitignore  CMakeLists.txt  loop.cpp
.run/: tetris_gui.run.xml
docs/: 图形化概要设计书.html  图形化概要设计书.md
resources/: resources.qrc
src/: Block.cpp  Block.h  Context.cpp  Context.h  Game.cpp  Game.h  Pos.h  Repository.cpp  Repository.h  cell_drawing.cpp  control.cpp  loop.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/: frames_rename.py
